MySQL Connector/Python - Release Notes & Changes
====================================================

MySQL Connector/Python
Copyright (c) 2009, 2025, Oracle and/or its affiliates.

Full release notes:
 http://dev.mysql.com/doc/relnotes/connector-python/en/

v9.4.0
======

- BUG#37806057: Rename extra option (when installing wheel package) to install webauthn functionality dependencies

v9.3.0
======

- WL#16754: The host wildcard no longer applies to localhost
- WL#16752: Deprecate class methods to access instance data or to know instance internal state
- WL#16327: Remove Cursors Prepared Raw and Named Tuple
- BUG#37541353: (Contribution) Fix typing annotation of MySQLConnectionAbstract's close function
- BUG#37453587: Github links in PyPI project's pages do not work
- BUG#37447394: Unable to escape a parameter marker (`%s`) used in a query that should not be treated as a parameter marker
- BUG#37418436: Arbitrary File Read in MySQL Python Client library
- BUG#37410052: Bad formatting of exceptions when connecting with Unix sockets
- BUG#37399636: The C-extension has a memory leak when working with prepared statements
- BUG#37275524: Exception is not interpreted properly on prepared statements when C extension is in use
- BUG#36098290: mysql-connector-python is distributed without setup.py or pyproject.toml

v9.2.0
======

- WL#16381: Add support for read and write timeouts
- WL#16285: Remake Multi Statement Execution
- BUG#37145655: MySQL Connector/Python Configuration Files RCE
- BUG#36702939: connection_cext has a memory leak in the python mysql-connector
- BUG#36922645: Option `connection_timeout` is overwritten and works as "query" timeout instead
- BUG#36126909: "Unread result found" exception/bad MySQLCursor.statement when query text contains code comments
- BUG#35810050: Executing multiple statements fails when importing Sakila

v9.1.0
======

- WL#16452: Bundle all installable authentication plugins when building the C-extension