@@ -12,6 +12,8 @@ v9.4.0
 ======
 
 - BUG#37806057: Rename extra option (when installing wheel package) to install webauthn functionality dependencies
+- BUG#34950958: MySQL Python Connector doesn't work with ssh in the same process
+- BUG#34844347: Freezes on connection via sshtunnel
 
 v9.3.0
 ======
